src/objects/User.object
<CustomObject>
    <fields>
        <fullName>NVMContactWorld__MostRecentCallEventTimestamp__c</fullName>
        <description>The timestamp of the most recent call event (deliver, transfer...) that this user has handled</description>
        <label>Most Recent Call Event Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCallIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent Call Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCall__c</fullName>
        <label>Most Recent Call</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Agent_Id__c</fullName>
        <description>NVM Agent Id for Contact World for Salesforce</description>
        <externalId>true</externalId>
        <inlineHelpText>NVM Agent Id for Contact World for Salesforce. This should be set to the correct NVM Agent Id to make sure that call tasks are assigned to the correct Salesforce user.</inlineHelpText>
        <label>NVM Agent Id</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NotesCollapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if notes andd additional fields should be collapsed in Log A Call quick action</description>
        <label>Notes Collapsed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>LIVEAGENT_USER</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>